<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark_emerald"
    android:orientation="vertical"
    tools:context=".AuthActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logoza_ru__12_" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/authorize_account"
        android:textColor="@color/primary_light_blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:textColor="@color/primary_light_blue"
        android:textColorHint="@color/primary_hint" />

    <EditText
        android:id="@+id/user_pass_auth"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/primary_light_blue"
        android:textColorHint="@color/primary_hint" />

    <Button
        android:id="@+id/button_auth"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/primary_coral"
        android:text="Войти"
        android:textColor="@color/primary_text_button"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter"
        android:text="@string/register"
        android:textColor="@color/primary_light_blue"
        android:textSize="17sp" />

</LinearLayout>